@@ -16,5 +16,5 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        find . -name '*.py' -exec pylint {} \;
+        pylint --fail-under 9.5 src/*
 
