@@ -142,6 +142,7 @@ disable=print-statement,
 	invalid-name,
 	too-few-public-methods,
 	global-statement,
+	line-too-long,
         comprehension-escape
 
 # Enable the message, report, category or checker with the given id(s). You can
@@ -484,10 +485,10 @@ check-str-concat-over-line-jumps=no
 [DESIGN]
 
 # Maximum number of arguments for function / method.
-max-args=5
+max-args=7
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=7
+max-attributes=8
 
 # Maximum number of boolean expressions in an if statement (see R0916).
 max-bool-expr=5
