@@ -1,0 +1,2 @@
+#!/bin/sh
+docker build . -t pierre42100/acme-responder
