@@ -3,13 +3,12 @@ Manages orders, challenges request
 """
 import json
 import time
-from src.accounts_manager import Account
-from src.base64_utils import safe_base64_decode, safe_base64_encode
-from src.config import settings
-from src.rand_utils import get_random_string
 from hashlib import sha256
 import requests
 
+from src.base64_utils import safe_base64_decode, safe_base64_encode
+from src.config import settings
+from src.rand_utils import get_random_string
 from src.time_utils import fmt_time
 from src.x509 import X509
 
@@ -33,6 +32,12 @@ class OrderDomain:
         self.http_challenge_id = get_random_string(10)
         self.http_challenge_token = get_random_string(20)
 
+    def is_expired(self) -> bool:
+        """
+        Check if the order is expired
+        """
+        return self.expire < time.time()
+
     def http_challenge_url(self) -> str:
         """
         Get the URL where a challenge must be checked
@@ -42,8 +47,19 @@ class OrderDomain:
     def check_http_challenge(self, account_jwk) -> bool:
         """
         Attempt to validate the HTTP challenge
+
+        :param account_jwk: The JWK of the account making the request
+        :return: True if the JWK is valid, false otherwise
         """
-        response = requests.get(self.http_challenge_url(), allow_redirects=True)
+
+        if self.is_expired():
+            raise OrderException(
+                "Can not check an HTTP challenge for an expired order!"
+            )
+
+        response = requests.get(
+            self.http_challenge_url(), allow_redirects=True, timeout=10
+        )
 
         if response.status_code != 200:
             return False
@@ -89,9 +105,16 @@ class OrderDomain:
 
 
 class Order:
+    """
+    Contains orders information
+    """
+
     def __init__(self, domains: list[str], account_id: str):
         """
-        Contains orders information
+        Initialize a new order
+
+        :param domains: The domains to include in the certificate
+        :param account_id: The ID of the target account
         """
         self.id = get_random_string(10)
         self.account_id = account_id
@@ -112,11 +135,13 @@ class Order:
         """
         Check if all requirements of the order were full_filled
         """
-        return all(x.full_filled for x in self.domains)
+        return all(x.full_filled for x in self.domains) and not self.is_expired()
 
     def sign_csr(self, csr: str):
         """
         Sign the CSR of a client, if possible
+
+        :param csr: The CSR to sign
         """
         if self.crt is not None:
             raise OrderException("A certificate has already been issued!")
@@ -138,7 +163,7 @@ class Order:
         )
         self.cert_id = get_random_string(10)
 
-    def url(self):
+    def url(self) -> str:
         """
         Get order URL
         """
@@ -147,6 +172,8 @@ class Order:
     def status(self) -> str:
         """
         Get current order status, as text
+
+        This method is used in the `info` method of this object
         """
         if self.crt is not None:
             return "valid"
@@ -178,47 +205,67 @@ class Order:
         return status
 
 
-# TODO : cleanup old orders
-ORDERS: list[Order] = []
-
-
 class OrdersManager:
     """
     Orders manager
     """
 
+    ORDERS: list[Order] = []
+
+    @staticmethod
+    def cleanupOldOrders():
+        """
+        Remove outdated orders from the list
+        """
+        OrdersManager.ORDERS = list(
+            filter(lambda x: not x.is_expired(), OrdersManager.ORDERS)
+        )
+
     @staticmethod
     def create(account_id: str, domains: list[str]) -> Order:
         """
         Create a new order
+
+        :param account_id: The ID of the target account
+        :param domains: The domains included in the request
+        :return: The created order
         """
-        global ORDERS
         order = Order(domains=domains, account_id=account_id)
-        ORDERS = list(filter(lambda o: not o.is_expired(), ORDERS))
-        ORDERS.append(order)
+        OrdersManager.cleanupOldOrders()
+        OrdersManager.ORDERS.append(order)
         return order
 
     @staticmethod
     def find_order_by_id(account_id: str, order_id: str) -> Order:
         """
         Find an order by its id
+
+        :param account_id: The ID of the account making the request
+        :param order_id: The ID of the target order
+        :return: Information about the order
         """
-        global ORDERS
 
         return next(
-            filter(lambda x: x.account_id == account_id and x.id == order_id, ORDERS)
+            filter(
+                lambda x: x.account_id == account_id and x.id == order_id,
+                OrdersManager.ORDERS,
+            )
         )
 
     @staticmethod
     def find_order_by_cert_id(account_id: str, cert_id: str) -> Order:
         """
         Find an order by certificates id
+
+        :param account_id: The ID of the account making the request
+        :param cert_id: The ID of the certificate
+        :return: Information about the order
         """
-        global ORDERS
 
         return next(
             filter(
-                lambda x: x.account_id == account_id and x.cert_id == cert_id, ORDERS
+                lambda x: x.account_id == account_id and x.cert_id == cert_id,
+                OrdersManager.ORDERS,
             )
         )
 
@@ -226,10 +273,13 @@ class OrdersManager:
     def find_domain_by_authz_id(account_id: str, authz_id: str) -> OrderDomain:
         """
         Find an OrderDomain by its AuthzID
-        """
-        global ORDERS
 
-        for order in ORDERS:
+        :param account_id: The ID of the account making the request
+        :param authz: The ID of the target authorization ID
+        :return: Information about the domain order
+        """
+
+        for order in OrdersManager.ORDERS:
             if order.account_id != account_id:
                 continue
             for domain in order.domains:
@@ -242,10 +292,13 @@ class OrdersManager:
     def find_domain_by_http_chall_id(account_id: str, chall_id: str) -> OrderDomain:
         """
         Find an OrderDomain by its HTTP Challenge ID
-        """
-        global ORDERS
 
-        for order in ORDERS:
+        :param account_id: The ID of the account making the request
+        :param chall_id: The ID of the challenge
+        :return: Information about the requested domain in the order
+        """
+
+        for order in OrdersManager.ORDERS:
             if order.account_id != account_id:
                 continue
             for domain in order.domains:
