@@ -1,3 +1,10 @@
+V2 :
+* Nonces cleanup
+* Improve code quality (pylint node > 9.5)
+* Take in account orders expiration
+* Add API rate limiting
+* Add Docker image
+
 V1 :
 * Created project
 * Added schema
